@@ -1993,6 +1993,14 @@ command to generate the output files.
     <glob pattern="*.lyx"/>
     <alias type="text/x-lyx"/>
   </mime-type>
+  <mime-type type="application/x-lzip">
+    <_comment>Lzip archive</_comment>
+    <generic-icon name="package-x-generic"/>
+    <magic priority="50">
+      <match type="string" value="LZIP" offset="0"/>
+    </magic>
+    <glob pattern="*.lz"/>
+  </mime-type>
   <mime-type type="application/x-lzma">
     <_comment>LZMA archive</_comment>
     <acronym>LZMA</acronym>
