@@ -179,6 +179,8 @@ copying.cab application/vnd.ms-cab-compressed
 # XZ test case found in the test cases in the sources
 good-1-delta-lzma2.tiff.xz application/x-xz
 spinboxes-0.1.1-Linux.tar.xz application/x-xz-compressed-tar ox
+# Created using lzip 1.1
+test.lz application/x-lzip
 
 # Audio/Video files
 # Copied from /usr/share/sounds/generic.wav
